[package]
name = "poppy"
version = "0.1.0"
edition = "2021"
authors = ["quentin.jerome@circl.lu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
jemallocator = "0.5.4"
thiserror = "1.0.57"
rand = "0.8.5"
wyhash = "0.5.0"
statrs = "0.16.0"

[dev-dependencies]
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"

[[bin]]
name = "poppy"
path = "src/bin/poppy.rs"
