[package]
name = "poppy-filters"
version = "0.1.0"
edition = "2021"
description = "Crate providing serializable Bloom fiters implementations"
keywords = ["bloom-filter", "data-structure"]
authors = ["quentin.jerome@circl.lu"]
rust-version = "1.74.1"
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
jemallocator = "0.5.4"
thiserror = "1.0.57"
rand = "0.8.5"
wyhash = "0.5.0"
statrs = "0.16.0"

[dev-dependencies]
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"

[[bin]]
name = "poppy"
path = "src/bin/poppy.rs"
