[package]
name = "poppy-py"
version = "0.2.0"
edition = "2021"
description = "Python bindings for poppy"
authors = ["quentin.jerome@circl.lu"]
rust-version = "1.74.1"
repository.workspace = true
license.workspace = true
readme = "README.md"
# there is no need to publish this crate as 
# it aims at being used with python
publish = false

[lib]
name = "poppy"
crate-type = ["cdylib"]
doc = false

[dependencies]
poppy = { path = "../poppy", package = "poppy-filters" }
pyo3 = "0.20.0"
