[build-system]
requires = ["maturin==1.6.0,<2.0"]
build-backend = "maturin"

[project]
name = "poppy-py"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
authors = [{ name = "Quentin JEROME", email = "quentin.jerome@circl.lu" }]
maintainers = [{ name = "Quentin JEROME", email = "quentin.jerome@circl.lu" }]
description = "Python bindings for poppy Rust library"
readme = "README.md"
[project.urls]
Repository = "https://github.com/hashlookup/poppy"
[tool.maturin]
features = ["pyo3/extension-module"]
